--- a/src/app/modules/admin/administration/administration.component.html
+++ b/src/app/modules/admin/administration/administration.component.html
@@ -24,7 +24,7 @@
             </a>
         </div>
         <div class="col">
-            <a href="/">
+            <a href="/admin/restaurant">
                 <button type="button" class="btn btn-warning">
                     Gestione Ristorante
                 </button>
