--- a/src/app/shared-modules/auth/components/login/login.component.html
+++ b/src/app/shared-modules/auth/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h2 style="color: dodgerblue; margin: auto; margin-bottom: 20%;  margin-bottom: 5%; text-align: center;">Accedi o
+    <h2 style="color: dodgerblue; margin: auto; margin-bottom: 5%;  margin-top: 5%; text-align: center;">Accedi o
         Registrati</h2>
 </div>
 <div class="card text-center mb-3" style="width: 18rem;margin: auto;">
