--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,27 +1,8 @@
-<nav ngbNav #nav="ngbNav" class="nav-tabs">
-    @if(!isLogged){
-    <ng-container ngbNavItem>
-        <a ngbNavLink>Login</a>
-        <ng-template ngbNavContent>
-            <app-login></app-login>
-        </ng-template>
-    </ng-container>
-    }@else{
-    <ng-container ngbNavItem>
-        <a ngbNavLink>Profilo</a>
-        <ng-template ngbNavContent>
-            <app-profile></app-profile>
-        </ng-template>
-    </ng-container>
-    @if(role==ADMIN){
-    <ng-container ngbNavItem>
-        <a ngbNavLink>Amministrazione</a>
-        <ng-template ngbNavContent>
-            <app-administration></app-administration>
-        </ng-template>
-    </ng-container>
-    }
-    }
-</nav>
-
-<div [ngbNavOutlet]="nav" class="mt-2"></div>
+@if(!isLogged){
+<app-login></app-login>
+}@else {
+<div style="margin: auto; text-align: center; margin-top: 10%;">
+    <h1 style="color:dodgerblue; width: 100%;">
+        Benvenuto </h1>
+</div>
+}
