Updated Homepage view.

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -3,6 +3,6 @@
 }@else {
 <div style="margin: auto; text-align: center; margin-top: 10%;">
     <h1 style="color:dodgerblue; width: 100%;">
-        Benvenuto </h1>
+        Benvenuto {{user?.name}} {{user?.surname}}! </h1>
 </div>
 }
